Created new [GrxAnimatedLoadingButton] widget

--- a/sample/i18n/en.json
+++ b/sample/i18n/en.json
@@ -15,5 +15,7 @@
   "home.tab.dashboard": "Dashboard",
   "home.tab.cellules": "Cellules",
   "home.tab.people": "People",
-  "home.tab.settings": "Settings"
+  "home.tab.settings": "Settings",
+
+  "login.signin.button.text": "Access"
 }
